# RISC-V-Simulator

./: .gitignore  CMakeLists.txt  README.md  register_dump.txt
dump/: expr.dump  multiarray.dump
sample_program/: interpreter.hpp  main  main.cpp
src/: main.cpp
src/core/: alu.hpp  cpu.hpp  memory.hpp  predictor.hpp  register_file.hpp
src/riscv/: decoder.hpp  instruction.hpp
src/tomasulo/: reorder_buffer.hpp  reservation_station.hpp
src/utils/: binary_loader.hpp  dump.hpp  exceptions.hpp  logger.hpp  queue.hpp
